fix word wrap/break in miniRotator masthead
add word-wrap: break-word; and word-break: normal; to .miniRotator's
.title and .copy classes

--- a/app/assets/stylesheets/widgets/masthead.scss
+++ b/app/assets/stylesheets/widgets/masthead.scss
@@ -167,6 +167,7 @@
     margin: 10px 0 0 0;
     line-height: 1.5;
     word-break: normal;
+	word-wrap: break-word;
   }
   .button {
     opacity: 0;
@@ -191,6 +192,8 @@
     font-weight: 600;
     position: relative;
     top: -3px;
+	word-wrap: break-word;
+    word-break: normal;
   }
 }
 
